  - (dtucker) [configure.ac openbsd-compat/bsd-misc.h] bz#2087: Add a null     implementation of endgrent for platforms that don't have it (eg Android).     Loosely based on a patch from Nathan Osman, ok djm